--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,51 @@ body {
         'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+
+    background-color: #999;
+    color: #333;
+    height: 100vh;
+    width: 100%;
 }
 
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
         monospace;
+}
+
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: #333;
+        color: #fff;
+    }
+}
+
+@layer reset {
+}
+@layer base {
+}
+@layer tokens {
+}
+@layer recipes {
+}
+@layer utilities {
+}
+
+#root {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    /* height and width 100? */
+}
+
+/* @media (prefers-reduced-motion: no-preference) {
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
+} */
+
+@media only screen and (max-width: 600px) {
+    .TabBar {
+        flex-direction: column;
+    }
 }
